feat(product): add PUT /api/v1/products/{id}/enable endpoint
Mirrors the existing /disable flow: ProductUseCase.enable port method,
ProductService implementation with @Retryable + @Recover (recoverEnable),
and ProductController endpoint with full Swagger annotations.

Unit tests cover happy path (disabled → enabled) and not-found
(ProductNotFoundException).